Closed Bug 1302023 Opened 8 years ago Closed 8 years ago

"Make Default" opens the "Set Default Programs" Control Panel instead of "Choose default apps" Settings

Categories

(Firefox :: Shell Integration, defect)

Unspecified
Windows 10
defect
Not set
normal

Tracking

()

VERIFIED FIXED
Firefox 53
Tracking Status
firefox48 --- wontfix
firefox49 --- wontfix
firefox50 --- wontfix
firefox51 --- wontfix
firefox52 --- verified
firefox53 --- verified
firefox54 --- verified

People

(Reporter: cpeterson, Unassigned)

References

Details

Attachments

(4 files)

STR: 1. Open about:preferences#general 2. Click "Make Default" button. RESULT: Firefox opens the "Set Default Programs" Control Panel instead of "Choose default apps" Settings. Edge and Chrome open the "Choose default apps" Settings window. I know Firefox used to open "Choose default apps" when I tested Windows 10 (in a VM) last year. But on my new Windows 10 laptop, Firefox opens Windows' legacy "Set Default Programs" Control Panel page with a big empty field and nothing selected. It is a baffling user experience. I see this with a clean user profile in Firefox 48-51. I'm using a new Windows 10 laptop, though I just upgraded to the Windows 10 Anniversary Update and I have opted into receiving the Windows Insider "Slow Ring" preview updates. So maybe this is a regression in pre-release Windows?
Attached image Choose_default_apps.jpg
Screenshot of the "Choose default apps" Settings page opened by Edge and Chrome.
Screenshot of the "Set Default Programs" Control Panel page opened by Firefox.
(In reply to Chris Peterson [:cpeterson] from comment #0) > I have opted into receiving the Windows Insider "Slow Ring" > preview updates. So maybe this is a regression in pre-release Windows? This is a workaround to avoid a known bug of Windows 10 "Choose default apps".
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → DUPLICATE
By the way, can you change the default browser from "Choose default apps" on affected systems?
Flags: needinfo?(cpeterson)
(In reply to Masatoshi Kimura [:emk] from comment #4) > By the way, can you change the default browser from "Choose default apps" on > affected systems? No. The "Choose default apps" UI shows me a list of browsers, but won't let me change the default browser. I can successfully change the default browser using the "Set Default Programs" Control Panel.
Status: RESOLVED → VERIFIED
Flags: needinfo?(cpeterson)
Reopening because this still happens on build 14965.
Status: VERIFIED → REOPENED
Resolution: DUPLICATE → ---
* Stop using the workaround on build >=14965. * Improve the UX of the workaround on older builds. (see <http://stackoverflow.com/questions/32178986/#answer-38805204>)
Comment on attachment 8809864 [details] Bug 1302023 - Disable a workaround for Windows 10 Default apps on build 14965 or later. https://reviewboard.mozilla.org/r/92366/#review92792
Attachment #8809864 - Flags: review?(jmathies) → review+
Pushed by VYV03354@nifty.ne.jp: https://hg.mozilla.org/integration/autoland/rev/dfbe2b8688c2 Disable a workaround for Windows 10 Default apps on build 14965 or later. r=jimm
Status: REOPENED → RESOLVED
Closed: 8 years ago8 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 53
Comment on attachment 8809864 [details] Bug 1302023 - Disable a workaround for Windows 10 Default apps on build 14965 or later. Approval Request Comment [Feature/Bug causing the regression]: 1251819 [User impact if declined]: Some local (non-MS) account users will have suboptimal default apps UX. The relevant Windows change will be included in Creators Update. So we should ship the fix before the Creators Update release. The planned release date for Firefox 53 is too late. [Is this code covered by automated tests?]: No, manually tested. [Has the fix been verified in Nightly?]: Yes [Needs manual test from QE? If yes, steps to reproduce]: Yes, STR: 1. Start Windows Insider Program. Make sure to select "Sign in to just this app instead". 2. Update to the latest Insider Preview. 3. If Firefox is already the default browser, (temporary) choose another browser. 4. Run Firefox, go to Options > General, and click "Make Default". 5. If it opens "Choose default apps" Settings, the bug is fixed. If it opens "Set Default Programs" Control Panel, the bug is not fixed. [List of other uplifts needed for the feature/fix]: none [Is the change risky?]: No [Why is the change risky/not risky?]: Only added one line Windows build number test and disable a hack if the build is new enough. Other browsers have never implemented the workaround, so the UX can not be worse than others. [String changes made/needed]: none
Attachment #8809864 - Flags: approval-mozilla-aurora?
Comment on attachment 8809864 [details] Bug 1302023 - Disable a workaround for Windows 10 Default apps on build 14965 or later. change "default apps" UX on latest win10, take in aurora52
Attachment #8809864 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Depends on: 1331171
Flags: qe-verify+
As stated in the bug description "choose default apps" screen should appear instead of "Set default programs". But when i tried to reproduce the bug "Set program associations" screen pops up in place of "Set default programs" , possibly making way for a new bug.
[bugday-20170301]
(In reply to Moneshb7 from comment #16) > As stated in the bug description "choose default apps" screen should appear > instead of "Set default programs". But when i tried to reproduce the bug > "Set program associations" screen pops up in place of "Set default programs" > , possibly making way for a new bug. 1. Are you using Insider Preview? 2. Are you using a local (non-Microsoft) account? 3. If the answer to 2 is "yes", Have you ever switched the account to an Microsoft account and then switched it back to a local account? 4. If you open [Default apps] from [Settings] > [System] (or [Settings] > [Apps] if you are using recent builds of Insider Preview), does it work? Windows 10 has a bug where [Default apps] does not work under some circumstances. As a workaround, we use [Set Default Programs] control panel when we consider we hit the bug. The bug has been fixed since Insider Preview build 14965.
Flags: needinfo?(Moneshb7)
(In reply to Masatoshi Kimura [:emk] from comment #19) > See comment #18. 1.No,im not using an Insider Preview. 2.No,using a Microsoft account and never switched. 4.Yes,the [Default apps] from [Settings] > [System] works.
Flags: needinfo?(Moneshb7)
Hm, then Firefox thinks you are not using Microsoft account even though actually you are. Could you file a new bug? It is painful to reuse a closed bug due to MozReview limitation.
Flags: needinfo?(Moneshb7)
(In reply to Masatoshi Kimura [:emk] from comment #21) > Hm, then Firefox thinks you are not using Microsoft account even though > actually you are. > > Could you file a new bug? It is painful to reuse a closed bug due to > MozReview limitation. Yeah sure, I'll look into it.
Flags: needinfo?(Moneshb7)
Could not reproduce this bug on Firefox 51.0.1(build without the fix) using Windows 10 with a local account or a Microsoft account. For both accounts, Firefox opens Settings -> System -> Default apps, and I am able to set Firefox the default Web Browser. Also, can confirm that issue is not reproducible on Firefox RC 52.0-build2 and latest Aurora 53.0a2, build ID 20170303004003. Chris, could you please verify if this is fixed on your side?
Flags: needinfo?(cpeterson)
Currently the steps in comment #0 no longer reproduce the issue. See bug 1251819 comment #35 about STR.
I can still reproduce the problem with Firefox 51, but the bug is fixed in Beta 52, Aurora 53, and Nightly 54. They all open the "Default apps" window, as expected.
Status: RESOLVED → VERIFIED
Flags: needinfo?(cpeterson)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: