Bug 1302023 - Disable a workaround for Windows 10 Default apps on build 14965 or later. r=jimm a=jcristau

MozReview-Commit-ID: 5mKkr12n9HP